Reverted Code to generate the list based on java 1.8 feature